overlays/dev/patch-namespace-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payflow
  labels:
    environment: development
