overlays/dev/aws-managed-services-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: payflow
spec:
  template:
    spec:
      containers:
      - name: auth-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-service
  namespace: payflow
spec:
  template:
    spec:
      containers:
      - name: wallet-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: payflow
spec:
  template:
    spec:
      containers:
      - name: transaction-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: payflow
spec:
  template:
    spec:
      containers:
      - name: notification-service
