overlays/dev/externalname-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: payflow
spec:
  type: ExternalName
  externalName: <rds-endpoint>
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: payflow
spec:
  type: ExternalName
  externalName: <elasticache-endpoint>
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: payflow
spec:
  type: ExternalName
  externalName: <amazon-mq-endpoint>
