overlays/dev/patch-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: payflow
spec:
  type: ClusterIP
